--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Promise Fru Resume</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -121,7 +121,7 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Web Developer</h3>
             <div class="subheading mb-3">Afkanerd</div>
-            <p>Worked with Afkanerd Cameroon as a full stack web developer <br>
+            <p>Working with Afkanerd Cameroon as a full stack web developer <br>
               <a href="https://afkanerd.io/">afkanerd.io</a>
             </p>
           </div>
