--- a/index.html
+++ b/index.html
@@ -253,6 +253,11 @@
             Quality Assurance - FreeCodeCamp Certified
             <a href="https://www.freecodecamp.org/certification/promisefru/quality-assurance-v7">Verify</a>
           </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Scientific Computing with Python - FreeCodeCamp Certified
+            <a href="https://www.freecodecamp.org/certification/promisefru/scientific-computing-with-python-v7">Verify</a>
+          </li>
         </ul>
       </div>
     </section>
