--- a/index.html
+++ b/index.html
@@ -122,14 +122,66 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Web Developer</h3>
+            <h3 class="mb-0">Front-end Web Developer</h3>
             <div class="subheading mb-3">Afkanerd</div>
-            <p>Working with Afkanerd Cameroon as a full stack web developer <br>
+            <p>Worked with Afkanerd Cameroon as a Front-end web developer <br>
               <a href="https://afkanerd.io/">afkanerd.io</a>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">2017 - Present</span>
+            <span class="text-primary">2017 - 2018</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Full-stack Web Developer</h3>
+            <div class="subheading mb-3">Afkanerd</div>
+            <p>Worked with Afkanerd Cameroon as a Full-stack web developer <br>
+              <a href="https://afkanerd.io/">afkanerd.io</a>
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2018 - 2019</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Software Developer</h3>
+            <div class="subheading mb-3">Afkanerd</div>
+            <p>Working with Afkanerd Cameroon as a software developer <br>
+              <a href="https://afkanerd.io/">afkanerd.io</a>
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2019 - PRESENT</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">API Engineer</h3>
+            <div class="subheading mb-3">SMS-without-borders</div>
+            <p>Contributor to SMS-without-borders as an API Engineer <br>
+              <a href="https://smswithoutborders.com/">SMSwithoutBorders</a>
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2021 - PRESENT</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Google Developers Students Club (DSC)</h3>
+            <div class="subheading mb-3">DSC Bamenda</div>
+            <p>Event Speaker<br>
+              <!-- <a href="https://smswithoutborders.com/">SMSwithoutBorders</a> -->
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2021 - PRESENT</span>
           </div>
         </div>
 
@@ -173,38 +225,53 @@
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline list-icons">
-          <li class="list-inline-item">
-            <i class="devicons devicons-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicons devicons-css3"></i>
-          </li>
-          <li class="list-inline-item">
+          <li title="Javascript" class="list-inline-item">
             <i class="devicons devicons-javascript"></i>
           </li>
-          <li class="list-inline-item">
-            <i class="devicons devicons-jquery"></i>
+          <li title="NodeJs" class="list-inline-item">
+            <i class="devicons devicons-nodejs"></i>
           </li>
-          <li class="list-inline-item">
-            <i class="devicons devicons-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicons devicons-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicons devicons-bootstrap"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicons devicons-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="devicons devicons-php"></i>
-          </li>
-          <li class="list-inline-item">
+          <li title="Python" class="list-inline-item">
             <i class="devicons devicons-python"></i>
           </li>
-          <li class="list-inline-item">
+          <li title="PHP" class="list-inline-item">
+            <i class="devicons devicons-php"></i>
+          </li>
+          <li title="NPM" class="list-inline-item">
             <i class="devicons devicons-npm"></i>
+          </li>
+          <li title="GIT" class="list-inline-item">
+            <i class="devicons devicons-git"></i>
+          </li>
+          <li title="GitHub" class="list-inline-item">
+            <i class="devicons devicons-github"></i>
+          </li>
+          <li title="MySQL" class="list-inline-item">
+            <i class="devicons devicons-mysql"></i>
+          </li>
+          <li title="MongoDB" class="list-inline-item">
+            <i class="devicons devicons-mongodb"></i>
+          </li>
+          <li title="JQuery" class="list-inline-item">
+            <i class="devicons devicons-jquery"></i>
+          </li>
+          <li title="HTML5" class="list-inline-item">
+            <i class="devicons devicons-html5"></i>
+          </li>
+          <li title="CSS3" class="list-inline-item">
+            <i class="devicons devicons-css3"></i>
+          </li>
+          <li title="SASS" class="list-inline-item">
+            <i class="devicons devicons-sass"></i>
+          </li>
+          <li title="LESS" class="list-inline-item">
+            <i class="devicons devicons-less"></i>
+          </li>
+          <li title="Bootstrap" class="list-inline-item">
+            <i class="devicons devicons-bootstrap"></i>
+          </li>
+          <li title="WordPress" class="list-inline-item">
+            <i class="devicons devicons-wordpress"></i>
           </li>
         </ul>
 
@@ -256,7 +323,14 @@
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Scientific Computing with Python - FreeCodeCamp Certified
-            <a href="https://www.freecodecamp.org/certification/promisefru/scientific-computing-with-python-v7">Verify</a>
+            <a
+              href="https://www.freecodecamp.org/certification/promisefru/scientific-computing-with-python-v7">Verify</a>
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Postman Student Expert - Postman Certified
+            <a
+              href="https://badgr.com/public/assertions/4HFRC2jaR-ifWiegJV9v-g">Verify</a>
           </li>
         </ul>
       </div>
