--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <h3 class="mb-0">Front-end Web Developer</h3>
             <div class="subheading mb-3">Afkanerd</div>
             <p>Worked with Afkanerd Cameroon as a Front-end web developer <br>
-              <a href="https://afkanerd.io/">afkanerd.io</a>
+              <a href="https://afkanerd.io/">Afkanerd</a>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -138,7 +138,7 @@
             <h3 class="mb-0">Full-stack Web Developer</h3>
             <div class="subheading mb-3">Afkanerd</div>
             <p>Worked with Afkanerd Cameroon as a Full-stack web developer <br>
-              <a href="https://afkanerd.io/">afkanerd.io</a>
+              <a href="https://afkanerd.io/">Afkanerd</a>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -151,7 +151,12 @@
             <h3 class="mb-0">Software Developer</h3>
             <div class="subheading mb-3">Afkanerd</div>
             <p>Working with Afkanerd Cameroon as a software developer <br>
-              <a href="https://afkanerd.io/">afkanerd.io</a>
+              <a href="https://afkanerd.io/">Afkanerd</a>
+            </p>
+
+            <div class="subheading mb-3">SMS-without-borders</div>
+            <p>Contributor<br>
+              <a href="https://smswithoutborders.com/">SMSwithoutBorders</a>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -161,23 +166,10 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">API Engineer</h3>
-            <div class="subheading mb-3">SMS-without-borders</div>
-            <p>Contributor to SMS-without-borders as an API Engineer <br>
-              <a href="https://smswithoutborders.com/">SMSwithoutBorders</a>
-            </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">2021 - PRESENT</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Google Developers Students Club (DSC)</h3>
-            <div class="subheading mb-3">DSC Bamenda</div>
-            <p>Event Speaker<br>
-              <!-- <a href="https://smswithoutborders.com/">SMSwithoutBorders</a> -->
+            <h3 class="mb-0">Events</h3>
+            <div class="subheading mb-3">Google Developers Students Club Bamenda (DSC)</div>
+            <p>Speaker<br>
+              <a href="https://dsc.community.dev/university-of-bamenda/">DSC Bamenda</a>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -189,35 +181,22 @@
 
     </section>
 
-    <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-        <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+      <div class="my-auto">
+        <h2 class="mb-5">Education</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
-            </div>
+        <div class="resume-item d-flex flex-column flex-md-row">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">High School Diploma</h3>
+            <div class="subheading mb-3">G.C.E A-Level</div>
           </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
-            </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2019</span>
           </div>
-
         </div>
-      </section> -->
+
+      </div>
+    </section>
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
       <div class="my-auto">
@@ -329,8 +308,7 @@
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             Postman Student Expert - Postman Certified
-            <a
-              href="https://badgr.com/public/assertions/4HFRC2jaR-ifWiegJV9v-g">Verify</a>
+            <a href="https://badgr.com/public/assertions/4HFRC2jaR-ifWiegJV9v-g">Verify</a>
           </li>
         </ul>
       </div>
