HNG page complete

--- a/HNG.html
+++ b/HNG.html
@@ -6,12 +6,112 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HNG Internship</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>
-        Hello world
-    </h1>
+    <div class="container-fluid">
+        <div class="row bg-dark text-light ">
+            <div class="col-md-6 py-3 mx-auto">
+                <hr class="bg-light border">
+                <h2 class="text-center"><a href="https://internship.zuri.team">HNG Internship 8</a></h2>
+                <hr class="bg-light border">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 pt-4 mx-auto">
+                <p>
+                    My name is Fru Promise from Cameroon. I am very enthusiastic about
+                    technology and open-source contributions. I am a back-end developer proficient in </p>
+                <ul>
+                    <li>NodeJs</li>
+                    <li>Python</li>
+                    <li>SQL</li>
+                    <li>NoSQL</li>
+                    <li>Git/Github </li>
+                </ul>
+                <p>
+                    I am honored to be a candidate for the <a href="https://internship.zuri.team">HNG internship 8</a>.
+                    I have heard so many exciting things about
+                    the HNG internship workspace, and with great curiosity, I applied to see for myself. By the end of
+                    this internship program, I hope to
+                </p>
+                <ul>
+                    <li>Be a better team player</li>
+                    <li>Gain more enterprise workspace experience</li>
+                    <li>Meet new people </li>
+                    <li>Broaden my skillset and technology stack</li>
+                    <li>Learn to manage work pressure</li>
+                    <li>Build better communication skills</li>
+                </ul>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 mx-auto">
+                <h4 class="text-primary">Beginner tutorials</h4>
+                <ul>
+                    <li>Figma
+                        <ul>
+                            <li><a href="https://youtu.be/1MbQaYCCzzI">Introduction to Figma</a></li>
+                            <li><a href="https://www.youtube.com/playlist?list=PLXDU_eVOJTx7QHLShNqIXL1Cgbxj7HlN4">Getting
+                                    started</a></li>
+                        </ul>
+                    </li>
+                    <li>Git/Github
+                        <ul>
+                            <li><a href="https://www.youtube.com/playlist?list=PLxuUHF3OiqfVlhMh2XaA7gx_NaavKM7C9">Introduction
+                                    to Git/Github</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=RGOj5yH7evk">Git/Github Crash Course</a></li>
+                        </ul>
+                    </li>
+                    <li>HTML/CSS
+                        <ul>
+                            <li><a href="https://www.youtube.com/playlist?list=PLxuUHF3OiqfWVlH5BTGUA9OboRF13Zyaj">Introduction
+                                    to HTML/CSS</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=mU6anWqZJcc">HTML/CSS Crash Course</a></li>
+                        </ul>
+                    </li>
+                    <li>Python
+                        <ul>
+                            <li><a href="https://www.youtube.com/playlist?list=PLxuUHF3OiqfWAITD4gPUHZ1GcYRqmyF7P">Introduction
+                                    to Python</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=rfscVS0vtbw">Python Crash Course</a></li>
+                        </ul>
+                    </li>
+                    <li>Javascript/NodeJs
+                        <ul>
+                            <li><a href="https://www.youtube.com/playlist?list=PLxuUHF3OiqfUi3RmnpaZHTh1qIXHzDMb8">Introduction
+                                    to Javascript/NodeJs</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=RLtyhwFtXQA">NodeJs Crash Course</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 mx-auto">
+                <h4 class="text-primary">Links</h4>
+                <ul>
+                    <li><a href="https://zuri.team">https://zuri.team</a></li>
+                    <li><a href="https://internship.zuri.team">https://internship.zuri.team</a></li>
+                    <li><a href="https://training.zuri.team">https://training.zuri.team</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
