added link atrib

--- a/HNG.html
+++ b/HNG.html
@@ -15,7 +15,7 @@
         <div class="row bg-dark text-light ">
             <div class="col-md-6 py-3 mx-auto">
                 <hr class="bg-light border">
-                <h2 class="text-center"><a href="https://internship.zuri.team">HNG Internship 8</a></h2>
+                <h2 class="text-center"><a href="https://internship.zuri.team" target="_blank">HNG Internship 8</a></h2>
                 <hr class="bg-light border">
             </div>
         </div>
@@ -32,7 +32,8 @@
                     <li>Git/Github </li>
                 </ul>
                 <p>
-                    I am honored to be a candidate for the <a href="https://internship.zuri.team">HNG internship 8</a>.
+                    I am honored to be a candidate for the <a href="https://internship.zuri.team" target="_blank">HNG
+                        internship 8</a>.
                     I have heard so many exciting things about
                     the HNG internship workspace, and with great curiosity, I applied to see for myself. By the end of
                     this internship program, I hope to
@@ -55,36 +56,45 @@
                     <li>Figma
                         <ul>
                             <li><a href="https://youtu.be/1MbQaYCCzzI">Introduction to Figma</a></li>
-                            <li><a href="https://www.youtube.com/playlist?list=PLXDU_eVOJTx7QHLShNqIXL1Cgbxj7HlN4">Getting
+                            <li><a href="https://www.youtube.com/playlist?list=PLXDU_eVOJTx7QHLShNqIXL1Cgbxj7HlN4"
+                                    target="_blank">Getting
                                     started</a></li>
                         </ul>
                     </li>
                     <li>Git/Github
                         <ul>
-                            <li><a href="https://www.youtube.com/playlist?list=PLxuUHF3OiqfVlhMh2XaA7gx_NaavKM7C9">Introduction
+                            <li><a href="https://www.youtube.com/playlist?list=PLxuUHF3OiqfVlhMh2XaA7gx_NaavKM7C9"
+                                    target="_blank">Introduction
                                     to Git/Github</a></li>
-                            <li><a href="https://www.youtube.com/watch?v=RGOj5yH7evk">Git/Github Crash Course</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=RGOj5yH7evk" target="_blank">Git/Github Crash
+                                    Course</a></li>
                         </ul>
                     </li>
                     <li>HTML/CSS
                         <ul>
-                            <li><a href="https://www.youtube.com/playlist?list=PLxuUHF3OiqfWVlH5BTGUA9OboRF13Zyaj">Introduction
+                            <li><a href="https://www.youtube.com/playlist?list=PLxuUHF3OiqfWVlH5BTGUA9OboRF13Zyaj"
+                                    target="_blank">Introduction
                                     to HTML/CSS</a></li>
-                            <li><a href="https://www.youtube.com/watch?v=mU6anWqZJcc">HTML/CSS Crash Course</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=mU6anWqZJcc" target="_blank">HTML/CSS Crash
+                                    Course</a></li>
                         </ul>
                     </li>
                     <li>Python
                         <ul>
-                            <li><a href="https://www.youtube.com/playlist?list=PLxuUHF3OiqfWAITD4gPUHZ1GcYRqmyF7P">Introduction
+                            <li><a href="https://www.youtube.com/playlist?list=PLxuUHF3OiqfWAITD4gPUHZ1GcYRqmyF7P"
+                                    target="_blank">Introduction
                                     to Python</a></li>
-                            <li><a href="https://www.youtube.com/watch?v=rfscVS0vtbw">Python Crash Course</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=rfscVS0vtbw" target="_blank">Python Crash
+                                    Course</a></li>
                         </ul>
                     </li>
                     <li>Javascript/NodeJs
                         <ul>
-                            <li><a href="https://www.youtube.com/playlist?list=PLxuUHF3OiqfUi3RmnpaZHTh1qIXHzDMb8">Introduction
+                            <li><a href="https://www.youtube.com/playlist?list=PLxuUHF3OiqfUi3RmnpaZHTh1qIXHzDMb8"
+                                    target="_blank">Introduction
                                     to Javascript/NodeJs</a></li>
-                            <li><a href="https://www.youtube.com/watch?v=RLtyhwFtXQA">NodeJs Crash Course</a></li>
+                            <li><a href="https://www.youtube.com/watch?v=RLtyhwFtXQA" target="_blank">NodeJs Crash
+                                    Course</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -95,9 +105,9 @@
             <div class="col-md-6 mx-auto">
                 <h4 class="text-primary">Links</h4>
                 <ul>
-                    <li><a href="https://zuri.team">https://zuri.team</a></li>
-                    <li><a href="https://internship.zuri.team">https://internship.zuri.team</a></li>
-                    <li><a href="https://training.zuri.team">https://training.zuri.team</a></li>
+                    <li><a href="https://zuri.team" target="_blank">https://zuri.team</a></li>
+                    <li><a href="https://internship.zuri.team" target="_blank">https://internship.zuri.team</a></li>
+                    <li><a href="https://training.zuri.team" target="_blank">https://training.zuri.team</a></li>
                 </ul>
             </div>
         </div>
