--- a/HNG.html
+++ b/HNG.html
@@ -55,7 +55,7 @@
                 <ul>
                     <li>Figma
                         <ul>
-                            <li><a href="https://youtu.be/1MbQaYCCzzI">Introduction to Figma</a></li>
+                            <li><a href="https://youtu.be/1MbQaYCCzzI" target="_blank">Introduction to Figma</a></li>
                             <li><a href="https://www.youtube.com/playlist?list=PLXDU_eVOJTx7QHLShNqIXL1Cgbxj7HlN4"
                                     target="_blank">Getting
                                     started</a></li>
