--- a/HNG.html
+++ b/HNG.html
@@ -108,6 +108,7 @@
                     <li><a href="https://zuri.team" target="_blank">https://zuri.team</a></li>
                     <li><a href="https://internship.zuri.team" target="_blank">https://internship.zuri.team</a></li>
                     <li><a href="https://training.zuri.team" target="_blank">https://training.zuri.team</a></li>
+                    <li><a href="https://cars.ng/" target="_blank">https://cars.ng/</a></li>
                 </ul>
             </div>
         </div>
