--- a/index.html
+++ b/index.html
@@ -2,330 +2,27 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+    <style>
+        body {
+            width: 100%;
+        }
 
-  <title>Fru Promise</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom fonts for this template -->
-  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900"
-    rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
-    rel="stylesheet">
-  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
-  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="css/resume.min.css" rel="stylesheet">
-
-  <!-- favicon -->
-  <link rel="shortcut icon" href="img/favicon.png" type="image/png">
-
+        h1 {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 
-<body id="page-top">
-
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="sideNav">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none"></span>
-      <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
-      </span>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
-        </li> -->
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <div class="container-fluid p-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
-      <div class="my-auto">
-        <h1 class="mb-0 text-secondary">Fru
-          <span class="text-dark">Promise</span>
-        </h1>
-        <div class="subheading mb-5">Cameroon ·
-          <a class="text-dark" href="mailto:promisefru1@gmail.com">promisefru1@gmail.com</a>
-        </div>
-        <p class="mb-5">I am a software developer experienced in Javascript, PHP, Python, NodeJs, SQL and NoSQL
-          databases, HTML(5), CSS(3), JQuery, agile SCRUM development methodologies.</p>
-        <ul class="list-inline list-social-icons mb-0">
-          <li class="list-inline-item">
-            <a href="https://web.facebook.com/promise.fru/">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://twitter.com/fru_promise">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.linkedin.com/in/fru-promise-0226411a8/">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://github.com/PromiseFru">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
-
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
-      <div class="my-auto">
-        <h2 class="mb-5">Experience</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Front-end Web Developer</h3>
-            <div class="subheading mb-3">Afkanerd</div>
-            <p>Worked with Afkanerd Cameroon as a Front-end web developer <br>
-              <a href="https://afkanerd.io/">Afkanerd</a>
-            </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">2017 - 2018</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Full-stack Web Developer</h3>
-            <div class="subheading mb-3">Afkanerd</div>
-            <p>Worked with Afkanerd Cameroon as a Full-stack web developer <br>
-              <a href="https://afkanerd.io/">Afkanerd</a>
-            </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">2018 - 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Software Developer</h3>
-            <div class="subheading mb-3">Afkanerd</div>
-            <p>Working with Afkanerd Cameroon as a software developer <br>
-              <a href="https://afkanerd.io/">Afkanerd</a>
-            </p>
-
-            <div class="subheading mb-3">SMS-without-borders</div>
-            <p>Contributor<br>
-              <a href="https://smswithoutborders.com/">SMSwithoutBorders</a>
-            </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">2019 - PRESENT</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Events</h3>
-            <div class="subheading mb-3">Google Developers Students Club Bamenda (DSC)</div>
-            <p>Speaker<br>
-              <a href="https://dsc.community.dev/university-of-bamenda/">DSC Bamenda</a>
-            </p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">2021 - PRESENT</span>
-          </div>
-        </div>
-
-      </div>
-
-    </section>
-
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-      <div class="my-auto">
-        <h2 class="mb-5">Education</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">High School Diploma</h3>
-            <div class="subheading mb-3">G.C.E A-Level</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">2019</span>
-          </div>
-        </div>
-
-      </div>
-    </section>
-
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
-      <div class="my-auto">
-        <h2 class="mb-5">Skills</h2>
-
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline list-icons">
-          <li title="Javascript" class="list-inline-item">
-            <i class="devicons devicons-javascript"></i>
-          </li>
-          <li title="NodeJs" class="list-inline-item">
-            <i class="devicons devicons-nodejs"></i>
-          </li>
-          <li title="Python" class="list-inline-item">
-            <i class="devicons devicons-python"></i>
-          </li>
-          <li title="PHP" class="list-inline-item">
-            <i class="devicons devicons-php"></i>
-          </li>
-          <li title="NPM" class="list-inline-item">
-            <i class="devicons devicons-npm"></i>
-          </li>
-          <li title="GIT" class="list-inline-item">
-            <i class="devicons devicons-git"></i>
-          </li>
-          <li title="GitHub" class="list-inline-item">
-            <i class="devicons devicons-github"></i>
-          </li>
-          <li title="MySQL" class="list-inline-item">
-            <i class="devicons devicons-mysql"></i>
-          </li>
-          <li title="MongoDB" class="list-inline-item">
-            <i class="devicons devicons-mongodb"></i>
-          </li>
-          <li title="JQuery" class="list-inline-item">
-            <i class="devicons devicons-jquery"></i>
-          </li>
-          <li title="HTML5" class="list-inline-item">
-            <i class="devicons devicons-html5"></i>
-          </li>
-          <li title="CSS3" class="list-inline-item">
-            <i class="devicons devicons-css3"></i>
-          </li>
-          <li title="SASS" class="list-inline-item">
-            <i class="devicons devicons-sass"></i>
-          </li>
-          <li title="LESS" class="list-inline-item">
-            <i class="devicons devicons-less"></i>
-          </li>
-          <li title="Bootstrap" class="list-inline-item">
-            <i class="devicons devicons-bootstrap"></i>
-          </li>
-          <li title="WordPress" class="list-inline-item">
-            <i class="devicons devicons-wordpress"></i>
-          </li>
-        </ul>
-
-        <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
-        </ul>
-      </div>
-    </section>
-
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-      <div class="my-auto">
-        <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a software developer, I enjoy most of my time playing musical instruments and video games. I
-          also spend a large amount of my free time exploring the latest technolgy advancements in the world</p>
-      </div>
-    </section>
-
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
-      <div class="my-auto">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            APIs and Microservices - FreeCodeCamp Certified
-            <a href="https://freecodecamp.org/certification/promisefru/apis-and-microservices">Verify</a>
-          </li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Fundamentals of digital marketing - Google Certified
-            <a href="HTTPS://LEARNDIGITAL.WITHGOOGLE.COM/DIGITALSKILLS/validate-certificate-code">Verify</a>
-          </li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Quality Assurance - FreeCodeCamp Certified
-            <a href="https://www.freecodecamp.org/certification/promisefru/quality-assurance-v7">Verify</a>
-          </li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Scientific Computing with Python - FreeCodeCamp Certified
-            <a
-              href="https://www.freecodecamp.org/certification/promisefru/scientific-computing-with-python-v7">Verify</a>
-          </li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Postman Student Expert - Postman Certified
-            <a href="https://badgr.com/public/assertions/4HFRC2jaR-ifWiegJV9v-g">Verify</a>
-          </li>
-        </ul>
-      </div>
-    </section>
-
-  </div>
-
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-  <!-- Custom scripts for this template -->
-  <script src="js/resume.min.js"></script>
-
+<body>
+    <h1>MegaMind</h1>
 </body>
 
 </html>
